--- a/.github/workflows/tag-action.yml
+++ b/.github/workflows/tag-action.yml
@@ -15,12 +15,12 @@ jobs:
     - run: git config --local user.email "action@github.com"
     - run: git config --local user.name "GitHub Action"
     - name: Bump version and push tag
-      uses: jordiandreu/github-tag-action@develop
+      uses: mxcube/github-tag-action@develop
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         WITH_V: false
     - name: push
-      uses: jordiandreu/commit@develop
+      uses: mxcube/commit@develop
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
 #        push-branch: develop The same original source branch: develop or release
